# gateway

./: .env.example  .gitignore  README.md  main.py  memory.json  migrate_tools.py  pyproject.toml  seed_personas.py  test_e2e.py  test_faiss.py  verify_channel_flow.py
.mempalace/: knowledge_graph.sqlite3-shm  knowledge_graph.sqlite3-wal
.mempalace/wal/: write_log.jsonl
app/: config.py  db.py  graph.py  logger.py  models.py  nodes.py  seed.py  state.py
app/api/: app.py  downloads.py  health.py  knowledge.py  personas.py  routes.py  session.py
app/api/adapters/: __init__.py  openai.py  tools.py
app/api/middleware/: __init__.py  checkpointer.py  circuit_breaker.py  intent_router.py  message_parser.py  rivebot_client.py  wuzapi_client.py
app/api/routers/: plugins.py
app/commands/: __init__.py  admin.py  broadcast.py  channel.py  content.py  core.py  cost.py  crm.py  health.py  knowledge.py  noai.py  persona.py  reload.py  skill_audit.py  status.py
app/graph/: chains.py  edges.py  graph.py  nodes.py  persona_logic.py  prompts.py  state.py
app/graph/tools/: __init__.py  config.py  forms.py  mocks.py  organized.py  rapidpro.py  registry.py  retrieval.py  system.py  talkprep.py  upload.py
app/hermes/: __init__.py  engine.py  schemas.py  tools.py
app/hooks/: __init__.py  palace_writer.py  siyuan_tools.py
app/llm/: __init__.py  client.py  embedder.py  embedding_client.py  providers.py
app/memory/: json_checkpointer.py  serializer.py
app/plugins/: __init__.py
app/plugins/social/: __init__.py  mastery.py  offline.py  scenarios.py  schemas.py  tools.py
app/plugins/system/: tools.py
app/rag/: __init__.py  chunker.py  ingest.py  ingest_konex.py  retriever.py  schema.py  service.py
app/services/: auth.py  channel.py
app/utils/: json_parser.py
backend/: .gitignore  checkpoints.sqlite-shm  checkpoints.sqlite-wal  curl_output.txt  curl_output_2.txt  embed_test.py  test_embedder.py
backend/app/: models.py
backend/app/api/: app.py  routes.py  schemas.py
backend/app/commands/: automation.py  registry.py
backend/app/graph/: chains.py  prompts.py  state.py
backend/app/graph/tools/: rapidpro.py
backend/app/llm/: __init__.py
backend/app/rag/: __init__.py  chunker.py  schema.py  vectorstore.py
backend/app/tests/: test_faiss.py
backend/tests/: reproduce_session_leak.py  test_urn_fallback.py
backups/flows/: crm_525d3ec7_20260421_215633.json  crm_b23cf8bc_20260421_215453.json  crm_d535ab65_20260421_215515.json  crm_ops_20260421_210858.json
frontend/: package-lock.json  package.json
graph_artifacts/: graph.mmd
scripts/: crm_ops_flows.json  konex_sales_flow.json  organized_menu_flow.json  patch_onboarding.py  patched_onboarding.json  scan_call_llm.sh  setup_crm_ops.py  setup_gateway.py  setup_konex_sales_flow.py  setup_konex_support_flow.py  setup_organized_flow.py  setup_organized_flows.py  setup_social_code.py  setup_social_code_flow.py  setup_talkprep_flow.py  social_code_flow.json
scripts/core/: verify_pipeline.py
scripts/data/: seed_organized_data.py  setup_social_code.py
scripts/exports/: konex_support_flow.json  social_code_flow.json  talkprep_flows.json
scripts/flows/: flow_builders.py  setup_crm_ops.py  setup_konex_sales_flow.py  setup_konex_support_flow.py  setup_organized_flow.py  setup_organized_flows.py  setup_social_code_flow.py  setup_talkprep_flow.py
scripts/organized_flows/: __init__.py  builders.py  flows.py
scripts/tools/: patch_onboarding.py  scan_call_llm.sh
tests/: test_api_v2.py  test_channel_extraction.py  test_commands.py  test_persona_smoke.py  test_services.py  verify_tools.py
