[project]
name = "ai-gateway"
version = "0.3.0"
description = "AI Gateway - Unified agentic backend for IIAB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "langgraph-checkpoint-postgres>=2.0.0",
    "litellm>=1.80.11",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=3.0.0",
    "uvicorn>=0.40.0",
    "asyncpg>=0.29.0",
    "sqlmodel>=0.0.16",
    # Domain libraries
    "jwlinker",
    "talkmaster",
    "rapidpro-python",
]

[tool.uv.sources]
jwlinker = { path = "/root/bm/jwlinker", editable = true }
talkmaster = { path = "/root/bm/talkmaster_v1.4", editable = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
