[project]
name = "ai-gateway"
version = "0.3.0"
description = "AI Gateway - Unified agentic backend for IIAB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "asyncpg>=0.29.0",
    "sqlmodel>=0.0.16",
    "aiosqlite",
    # Domain libraries
    "jwlinker",
    "talkmaster",
    "rapidpro-python",
    # V2 — Hermes Agent + MemPalace (in-process, not services)
    "hermes-agent",
    "mempalace",
    "tenacity>=9.0.0",
    # ── Security pins (transitive deps with known CVEs) ──
    "aiohttp>=3.13.3",       # CVE-2025-69223..69230
    "urllib3>=2.6.3",        # CVE-2026-21441
    "protobuf>=5.29.6,<7",   # CVE-2026-0994; capped <7 (breaks chromadb's opentelemetry-proto)
    "langsmith>=0.6.3",     # CVE-2026-25528
    "filelock>=3.20.3",     # CVE-2026-22701
    "opentelemetry-proto>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
]

[tool.uv.sources]
jwlinker = { path = "/opt/iiab/jwlinker", editable = true }
talkmaster = { path = "/opt/iiab/talkmaster", editable = true }
hermes-agent = { path = "/opt/iiab/hermes-agent", editable = true }
mempalace = { path = "/opt/iiab/mempalace", editable = true }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
